# flipkart-product-recommender

./: .gitignore  Dockerfile  main.py  pyproject.toml
flipkart/: rag_chain.py
prometheus/: prometheus-configmap.yaml
