[project]
name = "flipkart-product-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "flask>=3.1.2",
    "langchain>=1.0.8",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
]
